--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image = "0.24"
 vulkano = "0.28"
 vulkano-shaders = "0.28"
+vulkano-win = "0.28"
 winit = "0.26"
