--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 image = "0.24"
+nalgebra-glm = "0.16"
 std140 = "0.2"
 vulkano = "0.28"
 vulkano-shaders = "0.28"
