--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ edition = "2021"
 [dependencies]
 eruptrace_pure = { path = "eruptrace_pure" }
 eruptrace_scene = { path = "eruptrace_scene" }
+
+nalgebra-glm = "0.16"
