--- a/eruptrace_scene/Cargo.toml
+++ b/eruptrace_scene/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
+serde_json = "1.0"
 nalgebra-glm = "0.16"
 std140 = "0.2"
