--- a/eruptrace_pure/Cargo.toml
+++ b/eruptrace_pure/Cargo.toml
@@ -8,10 +8,17 @@ edition = "2021"
 
 [dependencies]
 eruptrace_scene = { path = "../eruptrace_scene" }
+eruptrace_vk = { path = "../eruptrace_vk" }
+
+erupt = "0.22"
+vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
+
 image = "0.24"
 nalgebra-glm = "0.16"
 std140 = "0.2"
+
 vulkano = "0.28"
 vulkano-shaders = "0.28"
 vulkano-win = "0.28"
+
 winit = "0.26"
