--- a/eruptrace_deferred/Cargo.toml
+++ b/eruptrace_deferred/Cargo.toml
@@ -1,14 +1,20 @@
 [package]
-name = "eruptrace_vk"
+name = "eruptrace_deferred"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
+
+eruptrace_scene = { path = "../eruptrace_scene" }
+eruptrace_vk = { path = "../eruptrace_vk" }
+
 erupt = "0.22"
 vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
-
-num-integer = "0.1"
-nalgebra-glm = "0.16"
 std140 = "0.2"
+
+itertools = "0.10"
+
+nalgebra-glm = "0.16"
