Large refactor: - Move scene buffer creation to eruptrace_scene - Add wrapper for creating graphics pipelines

--- a/eruptrace_vk/Cargo.toml
+++ b/eruptrace_vk/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 erupt = "0.22"
 vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
 
+itertools = "0.10"
 num-integer = "0.1"
 nalgebra-glm = "0.16"
 std140 = "0.2"
