--- a/eruptrace_scene/Cargo.toml
+++ b/eruptrace_scene/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eruptrace_vk = { path = "../eruptrace_vk" }
+
+erupt = "0.22"
+vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
+
 anyhow = "1.0"
+image = "0.24"
 itertools = "0.10"
 serde_json = "1.0"
 nalgebra-glm = "0.16"
