Hook up lighting pass.

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -39,7 +39,7 @@ enum_discrim_align_threshold = 40
 match_arm_blocks = true
 match_arm_leading_pipes = "Never"
 force_multiline_blocks = false
-fn_args_layout = "Compressed"
+fn_args_layout = "Tall"
 brace_style = "SameLineWhere"
 control_brace_style = "AlwaysSameLine"
 trailing_semicolon = true
