--- a/eruptrace_scene/Cargo.toml
+++ b/eruptrace_scene/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 [dependencies]
 eruptrace_vk = { path = "../eruptrace_vk" }
 
-erupt = "0.22"
-vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
+erupt = "0.23"
+vk-mem-3-erupt = "0.6"
 
 anyhow = "1.0"
 enumn = "0.1"
