--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,14 @@ eruptrace_pure = { path = "eruptrace_pure" }
 eruptrace_scene = { path = "eruptrace_scene" }
 eruptrace_vk = { path = "eruptrace_vk" }
 
-erupt = "0.22"
-erupt-bootstrap = "0.2"
-vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
-
-egui = "0.17"
-egui-winit = "0.17"
+erupt = "0.23"
+erupt-bootstrap = { git = "https://gitlab.com/Adanos020/erupt-bootstrap" }
+vk-mem-3-erupt = "0.6"
+egui = "0.24"
+egui-winit = "0.24"
 
 anyhow = "1.0"
 itertools = "0.12"
 nalgebra-glm = "0.18"
 pico-args = "0.5"
-winit = "0.26"
+winit = "0.28"
