--- a/eruptrace_pure/Cargo.toml
+++ b/eruptrace_pure/Cargo.toml
@@ -10,12 +10,12 @@ edition = "2021"
 eruptrace_scene = { path = "../eruptrace_scene" }
 eruptrace_vk = { path = "../eruptrace_vk" }
 
-erupt = "0.22"
-vk-mem-erupt = { git = "https://github.com/HindrikStegenga/vk-mem-erupt" }
+erupt = "0.23"
+vk-mem-3-erupt = "0.6"
 
 itertools = "0.12"
 image = "0.24"
 nalgebra-glm = "0.18"
 std140 = "0.2"
 
-winit = "0.26"
+winit = "0.28"
