--- a/eruptrace_deferred/Cargo.toml
+++ b/eruptrace_deferred/Cargo.toml
@@ -11,10 +11,10 @@ anyhow = "1.0"
 eruptrace_scene = { path = "../eruptrace_scene" }
 eruptrace_vk = { path = "../eruptrace_vk" }
 
-erupt = "0.23"
-vk-mem-3-erupt = "0.6"
+erupt = { git = "https://gitlab.com/Adanos020/erupt" }
+vk-mem-3-erupt = { git = "https://github.com/Adanos020/vk-mem-3-erupt" }
 std140 = "0.2"
 
-itertools = "0.12"
+itertools = "0.13"
 
-nalgebra-glm = "0.18"
+nalgebra-glm = "0.19"
