--- a/eruptrace_vk/Cargo.toml
+++ b/eruptrace_vk/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-erupt = "0.23"
-vk-mem-3-erupt = "0.6"
+erupt = { git = "https://gitlab.com/Adanos020/erupt" }
+vk-mem-3-erupt = { git = "https://github.com/Adanos020/vk-mem-3-erupt" }
 
-bitflags = "2.4"
-itertools = "0.12"
+bitflags = "1.3"
+itertools = "0.13"
 num-integer = "0.1"
-nalgebra-glm = "0.18"
+nalgebra-glm = "0.19"
 std140 = "0.2"
